# Eye-Torsion-Tracking

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup_dev.sh
.github/workflows/: ci.yml
config/: config.json
docs/: ALGORITHM.md
include/: DataLoader.hpp  TorsionDetector.hpp
include/algorithms/: PolarCrossCorrelation.hpp  TorsionAlgorithm.hpp
include/utils/: PerformanceTracker.hpp  TorsionVisualizer.hpp
src/: DataLoader.cpp  TorsionDetector.cpp  main.cpp
src/algorithms/: PolarCrossCorrelation.cpp
tests/: test_PolarCrossCorrelation.cpp
tools/: check_polar.py  check_shift.py  create_demo_video.py  debug_correlation.py  prepare_dataset.py  test_polar_axes.py  tune_hyperparameters.py  validate_results.py  visualize_dataset.py
